# Rubez

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
FiniteStateMachine_LightSwitch/: LightSwitchMain.cpp
examples/: JobApplication.cpp
src/state_pattern/: LightState.cpp
tests/: test_conceptual_example_01.cpp  test_conceptual_example_02.cpp  test_conceptual_example_03.cpp  test_concrete_states.cpp  test_department_store.cpp  test_job_application.cpp  test_light.cpp  test_light_state.cpp
